@@ -464,7 +464,7 @@ gpointer init_preference_store()
     GKeyFile *config;
 
     config = g_key_file_new();
-    filename = g_strdup_printf("%s/.mplayer/gnome-mplayer.conf", getenv("HOME"));
+    filename = g_strdup_printf("%s/gnome-mplayer/gnome-mplayer.conf", g_get_user_config_dir());
     g_key_file_load_from_file(config,
                               filename,
                               (GKeyFileFlags)(G_KEY_FILE_KEEP_COMMENTS | G_KEY_FILE_KEEP_TRANSLATIONS), NULL);
@@ -474,7 +474,7 @@ gpointer init_preference_store()
     
 }
 
-gboolean read_preference_bool(gpointer store, gchar * key)
+gboolean read_preference_bool(gpointer store, const gchar * key)
 {
     gboolean value = FALSE;
 #ifdef HAVE_GCONF
@@ -501,7 +501,7 @@ gboolean read_preference_bool(gpointer store, gchar * key)
     return value;
 }
 
-gint read_preference_int(gpointer store, gchar * key)
+gint read_preference_int(gpointer store, const gchar * key)
 {
     gint value = 0;
 #ifdef HAVE_GCONF
@@ -536,7 +536,7 @@ void release_preference_store(gpointer store)
     gchar *filename;
     gchar *data;
 
-    filename = g_strdup_printf("%s/.mplayer/gnome-mplayer.conf", getenv("HOME"));
+    filename = g_strdup_printf("%s/gnome-mplayer/gnome-mplayer.conf", g_get_user_config_dir());
     data = g_key_file_to_data((GKeyFile*)store, NULL, NULL);
 
     g_file_set_contents(filename, data, -1, NULL);
